@@ -251,11 +251,11 @@ module Raylib
   class RlVertexBuffer < FFI::Struct
     layout(
       :elementCount, :int,  # Number of elements in the buffer (QUADS)
-      :vertices, :pointer,  # Vertex position (XYZ - 3 components per vertex) (shader-location = 0)
-      :texcoords, :pointer, # Vertex texture coordinates (UV - 2 components per vertex) (shader-location = 1)
-      :normals, :pointer,   # Vertex normal (XYZ - 3 components per vertex) (shader-location = 2)
-      :colors, :pointer,    # Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)
-      :indices, :pointer,   # Vertex indices (in case vertex data comes indexed) (6 indices per quad)
+      :vertices, :pointer, 
+      :texcoords, :pointer,
+      :normals, :pointer,  
+      :colors, :pointer,   
+      :indices, :pointer,  
       :vaoId, :uint,        # OpenGL Vertex Array Object id
       :vboId, [:uint, 5],   # OpenGL Vertex Buffer Objects id (5 types of vertex data)
     )
