@@ -1,3 +1,7 @@
+2025-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/1ec281e86fa518dd8d8d85271e42cf8db4340f41) and raygui ( https://github.com/raysan5/raygui/commit/0895c8b8c4bf9e111492b19fba336d62d4a0b960 )
+
 2025-03-29  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/9a049d1d27e3fe92c2591bc190b7f497b5f0283e) and raygui ( https://github.com/raysan5/raygui/commit/ea928f56091078aad9af847a1607c22f06c5992f )
